# onto

./: .gitmodules  CMakeLists.txt  README.md
include/: class_axiom.hpp  description.hpp  property_axiom.hpp
src/: description.cpp
tests/: CMakeLists.txt
